--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <link data-n-head="ssr" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@simonwep/pickr/dist/themes/nano.min.css">
   <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.css" />
   
-  <link rel="stylesheet" href="./css/main.css" />
-  <link rel="stylesheet" href="./css/sub.css" />
+  <link rel="stylesheet" href="./static/css/main.css" />
+  <link rel="stylesheet" href="./static/css/sub.css" />
 
   
   <!-- <script charset="utf-8" src="/_nuxt/925cbac.js"></script>
