버스 줄바꿈 가독성 개선

--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
 
                           <div
                             class="id6-section6 mainbottom flex flex-col items-center justify-center text-center break-all"
-                            style="letter-spacing: 0em; color: #c69c6d; white-space: break-spaces;">2025년 2월 22일 토요일 오전
-                            11시<br>잠실 더 베네치아 웨딩홀</div>
+                            style="letter-spacing: 0em; color: #c69c6d; white-space: break-spaces;">2025년 2월 22일 토요일 오전 11시<br>잠실 더 베네치아 웨딩홀</div>
                           <div class="main-image-limit"></div>
                         </div>
                       </div>
@@ -857,8 +856,11 @@
                             </li>
                           </ul>
                           <p> 간선버스 &gt; 302, 303, 320, 341, 342</p>
-                          <p> 지선버스 &gt; 2412, 2415, 3215, 3216, 3313, 3315, 3318, 3319, 3411, 3412, 3413, 3414, 4318, 4319</p>
-                          <p> 좌석버스 &gt; 500-1, 1000, 1001, 1007, 1007-1, 1009, 1100, 1112, 1115, 1115-6, 1115-7, 1117, 1200, 1650, 1670, 1700, 2000, 5600, 5800, 6900, 7007, 8001, 8002, 9005</p>
+                          <p> 지선버스 &gt; 2412, 2415, 3215, 3216, 3313, 3315, 3318, 3319,</p>
+                          <p> &nbsp;&nbsp; 3411, 3412, 3413, 3414, 4318, 4319</p>
+                          <p> 좌석버스 &gt; 500-1, 1000, 1001, 1007, 1007-1, 1009, 1100,</p>
+                          <p> &nbsp;&nbsp; 1112, 1115, 1115-6, 1115-7, 1117, 1200, 1650, 1670,</p>
+                          <p> &nbsp;&nbsp; 1700, 2000, 5600, 5800, 6900, 7007, 8001, 8002, 9005</p>
                           <p> 공항버스 &gt; 6006</p>
                           <p> 일반버스 &gt; 30-1, 30-3, 30-5, 70</p>
                           <p></p>
