공유하기 썸네일로 수정

--- a/index.html
+++ b/index.html
@@ -1289,12 +1289,14 @@
 
   const kakaoShare = () => {
     Kakao.Share.sendDefault({
-      objectType: 'text',
-      text:
-        '김휘진 ♥ 주현정  청첩장, 2025년 2월 22일 토요일 11시',
-      link: {
-        mobileWebUrl: 'https://victoriajoo.github.io',
-        webUrl: 'https://victoriajoo.github.io',
+      objectType: 'feed',
+      content: {
+        title: '김휘진 ♥ 주현정  청첩장, 2025년 2월 22일 토요일 11시',
+        imageUrl: 'https://victoriajoo.github.io/static/image/kakaoShareThumbnail.jpg',
+        link: {
+          mobileWebUrl: 'https://victoriajoo.github.io',
+          webUrl: 'https://victoriajoo.github.io',
+        }
       },
     });
   }
