--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@
                         <p><span style="color: rgb(0, 0, 0)">함께 가자 먼 길 </span></p>
                         <p><span style="color: rgb(0, 0, 0)">너와 함께라면 멀어도 가깝고</span></p>
                         <p><span style="color: rgb(0, 0, 0)">아름답지 않아도 아름다운 길</span></p>
-                        <p><span style="color: rgb(0, 0, 0)">너도 그 길 위에서 나무가 되고</span></p>
+                        <p><span style="color: rgb(0, 0, 0)">나도 그 길 위에서 나무가 되고</span></p>
                         <p><span style="color: rgb(0, 0, 0)">너를 위해 착한 바람이 되고 싶다</span></p>
                         <br>
                         <p><span style="color: rgb(0, 0, 0)">- 나태주 '먼 길' -</span></p>
