갤러리 버그 수정

--- a/index.html
+++ b/index.html
@@ -1282,7 +1282,7 @@
   const detailWidth = Math.min(window.innerWidth, 800);
   const galleryWidth = Math.min(window.innerWidth - 22, 418);
 
-  const pageSize = document.querySelector(".slick-track").querySelectorAll('img').length - 1;
+  const pageSize = document.querySelector(".slick-track").querySelectorAll('img').length;
 
   const targetDate = new Date('2025-02-22 11:00');
   makeCellender(targetDate);
