--- a/index.html
+++ b/index.html
@@ -1296,7 +1296,7 @@
       objectType: 'feed',
       content: {
         title: '김휘진 ♥ 주현정  청첩장, 2025년 2월 22일 토요일 11시',
-        imageUrl: 'https://victoriajoo.github.io/static/image/kakaoShareThumbnail.jpg',
+        imageUrl: 'https://victoriajoo.github.io/static/image/gallery/main.png',
         link: {
           mobileWebUrl: 'https://victoriajoo.github.io',
           webUrl: 'https://victoriajoo.github.io',
