타이틀에서 청첩장 제거거

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <meta data-n-head="ssr" name="color-scheme" content="light only">
   <meta data-n-head="ssr" name="supported-color-schemes" content="light">
   <meta data-n-head="ssr" data-hid="og:type" content="website">
-  <meta data-n-head="ssr" data-hid="og:title" property="og:title" content="휘진❤️현정 청첩장.">
+  <meta data-n-head="ssr" data-hid="og:title" property="og:title" content="휘진❤️현정">
   <meta data-n-head="ssr" data-hid="og:description" property="og:description" content="2025년 2월 22일 토요일 11시">
   <meta data-n-head="ssr" data-hid="viewport" name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta data-n-head="ssr" property="og:type" content="website">
   <meta data-n-head="ssr" data-hid="og:image" property="og:image"
     content="https://victoriajoo.github.io/static/image/gallery/main.png">
-  <title>휘진❤️현정 청첩장.</title>
+  <title>휘진❤️현정</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css"
     integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g=="
@@ -1294,7 +1294,7 @@
     Kakao.Share.sendDefault({
       objectType: 'feed',
       content: {
-        title: '김휘진 ♥ 주현정  청첩장, 2025년 2월 22일 토요일 11시',
+        title: '김휘진 ♥ 주현정, 2025년 2월 22일 토요일 11시',
         imageUrl: 'https://victoriajoo.github.io/static/image/gallery/main.png',
         link: {
           mobileWebUrl: 'https://victoriajoo.github.io',
